[gd_scene load_steps=3 format=3 uid="uid://campaign_sector_node"]

[ext_resource type="Script" path="res://scripts/campaign/SectorNode.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sector"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.4)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.290196, 1)

[node name="SectorNode" type="Button"]
custom_minimum_size = Vector2(140, 120)
offset_right = 140.0
offset_bottom = 120.0
focus_mode = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sector")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="IconLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üèõÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Command"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThreatBar" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 4
max_value = 4.0
show_percentage = false

[node name="PulseTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
